Support Amazon Corretto (tdf#124297)

https://aws.amazon.com/corretto

Change-Id: I7f9ef25e1e81ededce426bad661adc6880feb9d3
Reviewed-on: https://gerrit.libreoffice.org/67289
(cherry picked from commit 41507db590b24e1b9b45d95cad55c71ba2e4091d)
Reviewed-on: https://gerrit.libreoffice.org/69688
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>