jvmfwk/plugins/sunmajor/pluginlib/vendorlist.cxx
@@ -43,6 +43,7 @@ BEGIN_VENDOR_MAP()
     VENDOR_MAP_ENTRY("Sun Microsystems Inc.", SunInfo)
     VENDOR_MAP_ENTRY("Oracle Corporation", SunInfo)
     VENDOR_MAP_ENTRY("AdoptOpenJdk", SunInfo)
+    VENDOR_MAP_ENTRY("Amazon.com Inc.", SunInfo)
 #ifndef MACOSX
     VENDOR_MAP_ENTRY("IBM Corporation", OtherInfo)
     VENDOR_MAP_ENTRY("Blackdown Java-Linux Team", OtherInfo)
